# rsliding

./: .gitignore  Cargo.toml  LICENSE  README.md  pyproject-pure.toml  pyproject.toml  testing_it.py
.github/workflows/: wheels.yml
python/: pyproject.toml
python/src/rsliding/: __init__.py  _bindings.pyi  convolution.py  padding.py  sliding_mean.py  sliding_median.py  sliding_sigma_clipping.py  sliding_standard_deviation.py  utils.py
python/src/rsliding/_pure/: __init__.py
python/src/rsliding/_pure/convolution/: __init__.py  convolution.py  padding.py
python/src/rsliding/_pure/mode/: __init__.py  sliding_mean.py  sliding_median.py
python/src/rsliding/_pure/mode/numba_functions/: __init__.py  sliding_median.py
python/src/rsliding/_pure/sigma_clipping/: __init__.py  sigma_clipping.py
python/src/rsliding/_pure/standard_deviation/: __init__.py  standard_deviation.py
rsliding_core/: Cargo.toml
rsliding_core/src/: lib.rs  sliding_mean.rs  sliding_median.rs  sliding_sigma_clipping.rs
rsliding_py/: Cargo.toml  lib.rs
rust/: Cargo.toml  README.md
rust/src/: lib.rs
rust/src/bindings/: convolution.rs  mod.rs  padding.rs  sliding_mean.rs  sliding_median.rs  sliding_sigma_clipping.rs  sliding_standard_deviation.rs  utils.rs
rust/src/core/: convolution.rs  mod.rs  padding.rs  sliding_mean.rs  sliding_median.rs  sliding_sigma_clipping.rs  sliding_standard_deviation.rs  utils.rs
src/: convolution.rs  lib.rs  padding.rs  sliding_mean.rs  sliding_sigma_clipping.rs  sliding_standard_deviation.rs  utils.rs
tests/: test_known_values.py
