[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "rsliding"
version = "1.0.0"
description = """
Rust code to be used in Python. Has sliding operations (padding, convolution, mean, median,
standard deviation, sigma clipping) for float64 numpy data with NaN values and a kernel with
weights.
"""
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Voyeux Alfred", email = "voyeuxalfred@gmail.com" }]
classifiers = [
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: Implementation :: CPython",
	"Programming Language :: Rust",
	"Typing :: Typed",
	"Operating System :: OS Independent",
	"Operating System :: Microsoft :: Windows",
	"Operating System :: MacOS",
	"Operating System :: POSIX :: Linux",
]
dependencies = ["numpy>=1.24"]

[project.urls]
Homepage = "https://github.com/avoyeux/rsliding"
Documentation = "https://github.com/avoyeux/rsliding#readme"
Source = "https://github.com/avoyeux/rsliding"

[tool.maturin]
bindings = "pyo3"
manifest-path = "rust/Cargo.toml"
module-name = "rsliding._bindings"
python-source = "python/src"
strip = true
sdist-include = [
	"python/src/rsliding/py.typed",
	"python/src/rsliding/_bindings.pyi",
]
