[package]
name = "rsliding"
version = "0.1.0"
edition = "2021"

[lib]
name = "rsliding"
crate-type = ["cdylib"]
path = "lib.rs"

[dependencies]
# Keep pyo3 and numpy on matching minor versions to avoid multiple
# native `python` links; numpy 0.21 expects pyo3 0.21.
pyo3 = { version = "0.21", features = ["extension-module"] }
numpy = "0.21"                  # for NumPy <-> ndarray conversion
rsliding_core = { path = "../rsliding_core" }
ndarray = "0.17.2"  

