[package]
name = "rust"
version = "1.0.0"
edition = "2024"

[lib]
name = "_bindings"
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
approx = "0.5.1"
ndarray = { version="0.17.2", features = ["approx", "rayon"] }
num-traits = "0.2.19"
rayon = "1.11.0"
pyo3 = { version = "0.21", features = ["extension-module", "abi3-py310"] }
numpy = "0.21"                  # for NumPy <-> ndarray conversion
